feat: add firebase storage module and service

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 PORT=3000
 DATABASE_URL='mysql://user:password@host[:PORT]/database'
+FIREBASE_PROJECT_ID=fifa2023uploads
+FIREBASE_PRIVATE_KEY_ID=your-private-key_id
+FIREBASE_PRIVATE_KEY=your-private-key
+FIREBASE_CLIENT_EMAIL=your-client-email
+FIREBASE_STORAGE_BUCKET=your-storage-bucket
